--- a/NUnitExtensionsTest/NUnitExtensionsTest.csproj
+++ b/NUnitExtensionsTest/NUnitExtensionsTest.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HelperClasses\InternalClassTest.cs" />
+    <Compile Include="HelperClasses\ObjectClassTest.cs" />
     <Compile Include="NUnitExtensionsTest.cs" />
+    <Compile Include="PrivateObjectTest.cs" />
+    <Compile Include="PrivateTypeTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="HelperClasses\PublicClassTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
