Make TestFixtureSetUp method in NUnitExtensions virtual.
Allow test case projects to derive from NUnitExtensions and also override the functionality there.

Issue: HELIOS-20

--- a/NUnitExtensionsTest/NUnitExtensionsTest.csproj
+++ b/NUnitExtensionsTest/NUnitExtensionsTest.csproj
@@ -46,6 +46,7 @@
     <Compile Include="HelperClasses\InternalClassTest.cs" />
     <Compile Include="HelperClasses\ObjectClassTest.cs" />
     <Compile Include="NUnitExtensionsBaseClassTest.cs" />
+    <Compile Include="NUnitExtensionsBaseClassVirtualTest.cs" />
     <Compile Include="NUnitExtensionsTest.cs" />
     <Compile Include="PrivateObjectTest.cs" />
     <Compile Include="PrivateTypeTest.cs" />
