--- a/NUnitExtensionsTest/NUnitExtensionsTest.csproj
+++ b/NUnitExtensionsTest/NUnitExtensionsTest.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -30,10 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,24 +37,29 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
+      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HelperClasses\InternalClassTest.cs" />
     <Compile Include="HelperClasses\ObjectClassTest.cs" />
-    <Compile Include="NUnitExtensionsBaseClassTest.cs" />
-    <Compile Include="NUnitExtensionsBaseClassVirtualTest.cs" />
-    <Compile Include="NUnitExtensionsTest.cs" />
     <Compile Include="PrivateObjectTest.cs" />
     <Compile Include="PrivateTypeTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HelperClasses\PublicClassTest.cs" />
+    <Compile Include="DeployForwardPathTest.cs" />
+    <Compile Include="Tools.cs" />
+    <Compile Include="DeployBaseClassTest.cs" />
+    <Compile Include="DeployBaseClassVirtualTest.cs" />
+    <Compile Include="DeployBackPathTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NUnitExtensions\NUnitExtensions.csproj">
-      <Project>{a4d356f2-15ac-4ffe-b0c4-1d3d0973a124}</Project>
+      <Project>{A4D356F2-15AC-4FFE-B0C4-1D3D0973A124}</Project>
       <Name>NUnitExtensions</Name>
     </ProjectReference>
   </ItemGroup>
