Expand implementation of PrivateObject and PrivateType to be compatible with MS implementation
Not all methods have been transferred, but the now PrivateType and PrivateObject contain all the methods for invoking, setting and getting fields or properties.

Test cases have been created that can test the MS implementation and the NUnitExtensions implementation with the same test code for direct comparison to enable the ability to ensure that the NUnitExtensions implementation behaves the same as the MS implementation. Only the test cases depend on the reference to Microsoft.VisualStudio.QualityTools.UnitTestFramework, the NUnitExtensions assembly doesn't, allowing it to be deployed.

The NUnitExtensions implementation has been implemented by decompiling v10.1.0.0 of Microsoft.VisualStudio.QualityTools.UnitTestFramework, then integrating into this library. There are a few minor differences, such as how exceptions are raised (stack frames will differ between the two implementations) and the exceptions raised when calling PrivateObject and PrivateType will slightly differ (the exception types should be the same however). The advantages of using this implementation is for an easier deployment.

NOTE: This code contains portions copyright Microsoft through decompilation with dotPeek, and should not be deployed outside of a private environment.

All methods in PrivateObject/PrivateType with culture in the signature are removed, making slightly different interfaces to the MS implementation. The culture doesn't appear to have any effect on testing at all. Indeed, test cases written against the MS version and our version to set the culture to English and German showed no visible effects and reading the culture was still the same as the thread's default culture.

The culture is only used when calling Invoke, InvokeMember, MakeGenericMethod. Microsoft Reference Sources, show that it is only given to the Binder (which is always null in PrivateObject/PrivateTest). As the Binder is

--- a/NUnitExtensions/NUnitExtensions.csproj
+++ b/NUnitExtensions/NUnitExtensions.csproj
@@ -47,10 +47,14 @@
     <Compile Include="AccessorBase.cs" />
     <Compile Include="Deploy.cs" />
     <Compile Include="DeploymentItemAttribute.cs" />
+    <Compile Include="GenericMethodCache.cs" />
+    <Compile Include="GenericPrivateObject.cs" />
+    <Compile Include="GenericPrivateType.cs" />
     <Compile Include="NUnitExtensions.cs" />
     <Compile Include="PrivateObject.cs" />
     <Compile Include="PrivateType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RuntimeTypeHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
