--- a/NUnitExtensionsTest/NUnitExtensionsTest.csproj
+++ b/NUnitExtensionsTest/NUnitExtensionsTest.csproj
@@ -30,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,14 +44,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccessorTest.cs" />
+    <Compile Include="GenericPrivateObjectTest.cs" />
+    <Compile Include="GenericPrivateTypeTest.cs" />
     <Compile Include="HelperClasses\AccessorClassTest.cs" />
     <Compile Include="HelperClasses\AccessorGenericClassTest.cs" />
     <Compile Include="HelperClasses\GenericClassTest.cs" />
+    <Compile Include="HelperClasses\InternalClassBase.cs" />
     <Compile Include="HelperClasses\InternalClassTest.cs" />
     <Compile Include="HelperClasses\ClassTest.cs" />
     <Compile Include="HelperClasses\ObjectClassTest.cs" />
     <Compile Include="HelperClasses\ObjectGenericClassTest.cs" />
+    <Compile Include="PrivateObjectAccessor.cs" />
     <Compile Include="PrivateObjectTest.cs" />
+    <Compile Include="PrivateTypeAccessor.cs" />
     <Compile Include="PrivateTypeTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HelperClasses\PublicClassTest.cs" />
