Provide static method accessors
Issue: HELIOS-223

--- a/NUnitExtensionsTest/NUnitExtensionsTest.csproj
+++ b/NUnitExtensionsTest/NUnitExtensionsTest.csproj
@@ -54,6 +54,8 @@
     <Compile Include="HelperClasses\ClassTest.cs" />
     <Compile Include="HelperClasses\ObjectClassTest.cs" />
     <Compile Include="HelperClasses\ObjectGenericClassTest.cs" />
+    <Compile Include="HelperClasses\StaticClassTest.cs" />
+    <Compile Include="HelperClasses\StaticClassTestAccessor.cs" />
     <Compile Include="PrivateObjectAccessor.cs" />
     <Compile Include="PrivateObjectTest.cs" />
     <Compile Include="PrivateTypeAccessor.cs" />
