Allow AccessorBase to be instantiated by a PrivateObject
By doing so, objects can be returned by reflection, given to a PrivateObject and then handed to a class deriving from AccessorBase. This allows one class to return instances of another class type wrapped by the appropriate AccessorBase object.

Issue: HELIOS-232

--- a/NUnitExtensionsTest/NUnitExtensionsTest.csproj
+++ b/NUnitExtensionsTest/NUnitExtensionsTest.csproj
@@ -66,6 +66,8 @@
     <Compile Include="HelperClasses\NestedStaticTypesAccessor.cs" />
     <Compile Include="HelperClasses\ObjectClassTest.cs" />
     <Compile Include="HelperClasses\ObjectGenericClassTest.cs" />
+    <Compile Include="HelperClasses\RelatedClassTest.cs" />
+    <Compile Include="HelperClasses\RelatedClassTestAccessor.cs" />
     <Compile Include="HelperClasses\StaticClassTest.cs" />
     <Compile Include="HelperClasses\StaticClassTestAccessor.cs" />
     <Compile Include="NestedPrivateTypeTest.cs" />
