--- a/NUnitExtensionsTest/NUnitExtensionsTest.csproj
+++ b/NUnitExtensionsTest/NUnitExtensionsTest.csproj
@@ -48,6 +48,7 @@
     <Compile Include="GenericPrivateTypeTest.cs" />
     <Compile Include="HelperClasses\ClassExceptionCtorTest.cs" />
     <Compile Include="HelperClasses\ClassExceptionCtorTestAccessor.cs" />
+    <Compile Include="HelperClasses\ClassExceptionCtorTestAccessor2.cs" />
     <Compile Include="HelperClasses\ClassTestAccessor.cs" />
     <Compile Include="HelperClasses\GenericStack.cs" />
     <Compile Include="HelperClasses\GenericClassTestAccessor.cs" />
