--- a/NUnitExtensionsTest/NUnitExtensionsTest.csproj
+++ b/NUnitExtensionsTest/NUnitExtensionsTest.csproj
@@ -68,6 +68,8 @@
     <Compile Include="HelperClasses\ObjectGenericClassTest.cs" />
     <Compile Include="HelperClasses\RelatedClassTest.cs" />
     <Compile Include="HelperClasses\RelatedClassTestAccessor.cs" />
+    <Compile Include="HelperClasses\RelatedCollectionClass.cs" />
+    <Compile Include="HelperClasses\RelatedCollectionClassAccessor.cs" />
     <Compile Include="HelperClasses\StaticClassTest.cs" />
     <Compile Include="HelperClasses\StaticClassTestAccessor.cs" />
     <Compile Include="NestedPrivateTypeTest.cs" />
