Allow for non-public delegates for non-public events
Issue: HELIOS-265

--- a/NUnitExtensions/NUnitExtensions.csproj
+++ b/NUnitExtensions/NUnitExtensions.csproj
@@ -45,6 +45,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccessorBase.cs" />
+    <Compile Include="DelegateTarget.cs" />
+    <Compile Include="DelegateTargets.cs" />
     <Compile Include="Deploy.cs" />
     <Compile Include="DeploymentItemAttribute.cs" />
     <Compile Include="GenericMethodCache.cs" />
