Update the NuSpec to get files from the new distribute location
The build scripts were updated to install outputs in a more distinct location. Update the NuSpec file to point to where the files are now copied to.

Issue: HELIOS-462

--- a/NUnitExtensions/NUnitExtensions.nuspec
+++ b/NUnitExtensions/NUnitExtensions.nuspec
@@ -9,9 +9,9 @@
         <language>en-US</language>
     </metadata>
     <files>
-        <file src="..\distribute\lib\net40\RJCP.NUnitExtensions.dll" target="lib\net40\RJCP.NUnitExtensions.dll" />
-        <file src="..\distribute\lib\net40\RJCP.NUnitExtensions.pdb" target="lib\net40\RJCP.NUnitExtensions.pdb" />
-        <file src="..\distribute\lib\net40\RJCP.NUnitExtensions.XML" target="lib\net40\RJCP.NUnitExtensions.XML" />
+        <file src="..\distribute\RJCP.NUnitExtensions\lib\net40\RJCP.NUnitExtensions.dll" target="lib\net40\RJCP.NUnitExtensions.dll" />
+        <file src="..\distribute\RJCP.NUnitExtensions\lib\net40\RJCP.NUnitExtensions.pdb" target="lib\net40\RJCP.NUnitExtensions.pdb" />
+        <file src="..\distribute\RJCP.NUnitExtensions\lib\net40\RJCP.NUnitExtensions.XML" target="lib\net40\RJCP.NUnitExtensions.XML" />
         <file src="NUnitExtensions.csproj" target="src\NUnitExtensions.csproj" />
         <file src="**.cs" target="src" />
     </files>
