--- a/NUnitExtensionsTest/RJCP.NUnitExtensionsTest.csproj
+++ b/NUnitExtensionsTest/RJCP.NUnitExtensionsTest.csproj
@@ -31,6 +31,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" Condition="'$(Configuration)' == 'Debug' AND $(DefineConstants.Contains('VS2012'))" />
+    <Reference Include="nunit.framework, Version=2.6.7.0, Culture=neutral, PublicKeyToken=2638cd05610744eb">
+      <HintPath>..\..\..\packages\NUnit.2.6.7\lib\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -38,9 +42,6 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
-      <HintPath>..\..\..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccessorTest.cs" />
@@ -83,8 +84,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HelperClasses\PublicClassTest.cs" />
     <Compile Include="DeployForwardPathTest.cs" />
-    <Compile Include="DeployBaseClassTest.cs" />
-    <Compile Include="DeployBaseClassVirtualTest.cs" />
     <Compile Include="DeployBackPathTest.cs" />
   </ItemGroup>
   <ItemGroup>
