IniFiles: Provide a mechanism to read INI files for configuration
INI files contain case insensitive section headings and keys. It's an easy to read and create file format, that can be used for simple configuration formats, such as configuring test cases.

The IniKeyPair.Enumerator is optimized to have the same performance as a dictionary.

Issue: HELIOS-672

--- a/NUnitExtensions/RJCP.NUnitExtensions.csproj
+++ b/NUnitExtensions/RJCP.NUnitExtensions.csproj
@@ -41,6 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccessorBase.cs" />
+    <Compile Include="Config\IniFile.cs" />
+    <Compile Include="Config\IniKeyPair.cs" />
+    <Compile Include="Config\IniSection.cs" />
     <Compile Include="DelegateTarget.cs" />
     <Compile Include="DelegateTargets.cs" />
     <Compile Include="Deploy.cs" />
