NUnitExtensions: Allow the possibility to create a crash dump for deep debugging
Automated tests need a way to dump the state, and then continue without user interaction. In C, usually one uses an "Assert" which creates a SIGABORT and then can be used to later analyze a crash dump. The user can force a minidump which can be loaded with Visual Studio later and software continues its execution.

Issue: HELIOS-785

--- a/NUnitExtensionsTest/RJCP.NUnitExtensionsTest.csproj
+++ b/NUnitExtensionsTest/RJCP.NUnitExtensionsTest.csproj
@@ -47,6 +47,7 @@
     <Compile Include="AccessorTest.cs" />
     <Compile Include="Config\IniFileTest.cs" />
     <Compile Include="Config\IniSectionTest.cs" />
+    <Compile Include="DumpTest.cs" />
     <Compile Include="GenericPrivateObjectTest.cs" />
     <Compile Include="GenericPrivateTypeTest.cs" />
     <Compile Include="HelperClasses\ClassExceptionCtorTest.cs" />
