--- a/NUnitExtensions/RJCP.NUnitExtensions.csproj
+++ b/NUnitExtensions/RJCP.NUnitExtensions.csproj
@@ -48,6 +48,10 @@
     <Compile Include="DelegateTargets.cs" />
     <Compile Include="Deploy.cs" />
     <Compile Include="GenericMethodCache.cs" />
+    <Compile Include="Dump.cs" />
+    <Compile Include="Native\NativeMethods.cs" />
+    <Compile Include="Native\SafeNativeMethods.cs" />
+    <Compile Include="Native\UnsafeNativeMethods.cs" />
     <Compile Include="PrivateObject.cs" />
     <Compile Include="PrivateType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
