--- a/NUnitExtensionsTest.NUnit3/RJCP.NUnitExtensionsTest.NUnit3.csproj
+++ b/NUnitExtensionsTest.NUnit3/RJCP.NUnitExtensionsTest.NUnit3.csproj
@@ -1,16 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\..\..\packages\NUnit.3.11.0\build\NUnit.props" Condition="Exists('..\..\..\packages\NUnit.3.11.0\build\NUnit.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A4D356F2-15AC-4FFE-B0C4-1D3D0973A124}</ProjectGuid>
+    <ProjectGuid>{F79F7D1B-5BDC-4C5C-B0D2-E9CCA8620D3A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NUnit.Framework</RootNamespace>
-    <AssemblyName>RJCP.NUnitExtensions</AssemblyName>
+    <AssemblyName>NUnitExtensionsTest.NUnit3</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -28,37 +31,39 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\RJCP.NUnitExtensions.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=3.11.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\NUnit.3.11.0\lib\net40\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccessorBase.cs" />
-    <Compile Include="AppConfig\Deploy.cs" />
-    <Compile Include="AppConfig\NUnitExtensionsSection.cs" />
-    <Compile Include="Config\IniFile.cs" />
-    <Compile Include="Config\IniKeyPair.cs" />
-    <Compile Include="Config\IniSection.cs" />
-    <Compile Include="DelegateTarget.cs" />
-    <Compile Include="DelegateTargets.cs" />
-    <Compile Include="Deploy.cs" />
-    <Compile Include="GenericMethodCache.cs" />
-    <Compile Include="Dump.cs" />
-    <Compile Include="Native\NativeMethods.cs" />
-    <Compile Include="Native\SafeNativeMethods.cs" />
-    <Compile Include="Native\UnsafeNativeMethods.cs" />
-    <Compile Include="PrivateObject.cs" />
-    <Compile Include="PrivateType.cs" />
+    <Compile Include="DeployTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RuntimeTypeHelper.cs" />
-    <Compile Include="Platform.cs" />
-    <Compile Include="TestContextAccessor.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NUnitExtensions\RJCP.NUnitExtensions.csproj">
+      <Project>{a4d356f2-15ac-4ffe-b0c4-1d3d0973a124}</Project>
+      <Name>RJCP.NUnitExtensions</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\..\..\packages\NUnit.3.11.0\build\NUnit.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\packages\NUnit.3.11.0\build\NUnit.props'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
