NUnitExtensions: Don't rely on current working directory when testing
Deployment should occur from Deploy.TestDirectory to Deploy.WorkDirectory. When reading the deployed files, don't rely on the current directory, instead they are relative to Deploy.WorkDirectory.

In addition, do not deploy files that are intended for reading only, read directly from the Deploy.TestDirectory.

Make sure test cases don't write to Deploy.TestDirectory.

Issue: HELIOS-869

--- a/NUnitExtensionsTest/App.config
+++ b/NUnitExtensionsTest/App.config
@@ -5,6 +5,6 @@
   </configSections>
 
   <NUnitExtensions>
-    <deploy useCwd="true"/>
+    <deploy workDir="work" force="false"/>
   </NUnitExtensions>
 </configuration>
