--- a/NUnitExtensions/RJCP.NUnitExtensions.csproj
+++ b/NUnitExtensions/RJCP.NUnitExtensions.csproj
@@ -56,6 +56,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RuntimeTypeHelper.cs" />
     <Compile Include="Platform.cs" />
+    <Compile Include="ScratchOptions.cs" />
+    <Compile Include="ScratchPad.cs" />
+    <Compile Include="TestAccessor.cs" />
     <Compile Include="TestContextAccessor.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
