--- a/NUnitExtensionsTest/RJCP.NUnitExtensionsTest.csproj
+++ b/NUnitExtensionsTest/RJCP.NUnitExtensionsTest.csproj
@@ -43,6 +43,7 @@
     <Compile Include="AccessorTest.cs" />
     <Compile Include="Config\IniFileTest.cs" />
     <Compile Include="Config\IniSectionTest.cs" />
+    <Compile Include="DeployProperties.cs" />
     <Compile Include="DumpTest.cs" />
     <Compile Include="GenericPrivateObjectTest.cs" />
     <Compile Include="GenericPrivateTypeTest.cs" />
