--- a/NUnitExtensions/NUnitExtensions.nuspec
+++ b/NUnitExtensions/NUnitExtensions.nuspec
@@ -15,5 +15,6 @@
         <file src="RJCP.NUnitExtensions.csproj" target="src" />
         <file src="**.cs" target="src" />
         <file src="maml\AccessorBase.xml" target="src\maml" />
+        <file src="..\*.md" target="doc" />
     </files>
 </package>
