NUnitExtensions: Clean up benign warnings
IDE0017: Object initialization can be simplified. Only for instances with 3 or more.
IDE0018: Variable declaration can be inlined
IDE0019: Use pattern matching
IDE0028: Simplify collection initialization
IDE0054: Use compound assignment
IDE0059: Unnecessary assignment of variable
S1481: Removed unused local variable
S2292: Use auto properties

Issue: HELIOS-1162

--- a/NUnitExtensions/RJCP.NUnitExtensions.csproj
+++ b/NUnitExtensions/RJCP.NUnitExtensions.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Deploy.cs" />
     <Compile Include="GenericMethodCache.cs" />
     <Compile Include="Dump.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Native\NativeMethods.cs" />
     <Compile Include="Native\SafeNativeMethods.cs" />
     <Compile Include="Native\UnsafeNativeMethods.cs" />
