--- a/NUnitExtensionsTest.NUnit3/RJCP.NUnitExtensionsTest.NUnit3.csproj
+++ b/NUnitExtensionsTest.NUnit3/RJCP.NUnitExtensionsTest.NUnit3.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DeployTest.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
