--- a/NUnitExtensionsTest.NUnit3/RJCP.NUnitExtensionsTest.NUnit3.csproj
+++ b/NUnitExtensionsTest.NUnit3/RJCP.NUnitExtensionsTest.NUnit3.csproj
@@ -58,6 +58,9 @@
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\..\..\packages\NUnit.Analyzers.0.1.0-dev-00216\analyzers\dotnet\cs\nunit.analyzers.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
