--- a/NUnitExtensions/RJCP.NUnitExtensions.csproj
+++ b/NUnitExtensions/RJCP.NUnitExtensions.csproj
@@ -57,7 +57,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.cs" />
     <Compile Include="RuntimeTypeHelper.cs" />
-    <Compile Include="Platform.cs" />
+    <Compile Include="OSInfo\Platform.cs" />
     <Compile Include="ScratchOptions.cs" />
     <Compile Include="ScratchPad.cs" />
     <Compile Include="TestAccessor.cs" />
