NUnitExtensions: Allow indpendent development by providing a solution file
As the solution file was previously kept out of the repository, the paths were relative to a solution that wasn't under revision control. Provide a solution file, but modify the .csproj files so that it will work no matter where the solution is kept.

Issue: HELIOS-1332

--- a/NUnitExtensionsTest/RJCP.NUnitExtensionsTest.csproj
+++ b/NUnitExtensionsTest/RJCP.NUnitExtensionsTest.csproj
@@ -31,7 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="nunit.framework, Version=2.7.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\NUnit.2.7.1\lib\nunit.framework.dll</HintPath>
+      <HintPath>$(SolutionDir)\packages\NUnit.2.7.1\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -113,7 +113,7 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
-    <Analyzer Include="..\..\..\packages\NUnit.Analyzers.0.1.0-dev-00216\analyzers\dotnet\cs\nunit.analyzers.dll" />
+    <Analyzer Include="$(SolutionDir)\packages\NUnit.Analyzers.0.1.0-dev-00216\analyzers\dotnet\cs\nunit.analyzers.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
