--- a/CodeQuality/RJCP.CodeQuality.nuspec
+++ b/CodeQuality/RJCP.CodeQuality.nuspec
@@ -2,9 +2,12 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>RJCP.CodeQuality</id>
-        <version></version>
+        <version>0.5.0.1</version>
         <authors>Jason Curl</authors>
+		<copyright>(C) 2016-2020, Jason Curl</copyright>
+		<license type="expression">MIT</license>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
+		<projectUrl>https://github.com/jcurl/CodeQuality</projectUrl>
         <description>Common functions to augment unit and integration testing, with some focus on the NUnit Test Framework.</description>
         <language>en-US</language>
     </metadata>
