--- a/CodeQualityTest/packages.config
+++ b/CodeQualityTest/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="NUnit" version="2.7.1" targetFramework="net40" />
   <package id="NUnit.Analyzers" version="0.1.0-dev-00216" targetFramework="net40" />
+  <package id="NUnitTestAdapter" version="2.3.0" targetFramework="net40" />
 </packages>
