--- a/CodeQuality/RJCP.CodeQuality.nuspec
+++ b/CodeQuality/RJCP.CodeQuality.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>RJCP.CodeQuality</id>
-        <version>0.5.0.1</version>
+        <version></version>
         <authors>Jason Curl</authors>
 		<copyright>(C) 2016-2020, Jason Curl</copyright>
 		<license type="expression">MIT</license>
