--- a/CodeQuality/RJCP.CodeQuality.nuspec
+++ b/CodeQuality/RJCP.CodeQuality.nuspec
@@ -16,7 +16,7 @@
         <file src="bin\build\net40\RJCP.CodeQuality.pdb" target="lib\net40" />
         <file src="bin\build\net40\RJCP.CodeQuality.XML" target="lib\net40" />
         <file src="RJCP.CodeQuality.csproj" target="src" />
-        <file src="**.cs" target="src" />
+        <file src="**.cs" target="src" exclude="obj\**\*.*" />
         <file src="maml\AccessorBase.xml" target="src\maml" />
         <file src="..\*.md" target="doc" />
     </files>
