Fix Minor Suggestions (readonly, styles)
CA2211: Non-constant fields should not be visible, which is fixed by marking these fields as `readonly`.

IDE0044: Make fields read-only. For one case where the field is accessed via reflection, the `readonly` keyword cannot be applied, else a `FieldAccessException` is raised (in the `InternalClassTest` class).
IDE0056: Use index operator suppressed for multi-framework targetting
IDE0057: Use range operator suppressed for multi-framework targetting

Issue: DOTNET-360

--- a/CodeQuality/RJCP.CodeQuality.csproj
+++ b/CodeQuality/RJCP.CodeQuality.csproj
@@ -66,6 +66,7 @@
     <Compile Include="DelegateTarget.cs" />
     <Compile Include="DelegateTargets.cs" />
     <Compile Include="GenericMethodCache.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="NUnitExtensions\Deploy.cs" />
     <Compile Include="NUnitExtensions\ScratchOptions.cs" />
     <Compile Include="NUnitExtensions\ScratchPad.cs" />
